Fix overflow issues on long problems

--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -8,6 +8,6 @@
   text-shadow: 0 1px 0 #444;
   border-radius: 2px;
   border: 0;
-  height: 40px;
   margin: 5px 0;
+  padding: 10px;
 }
